Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.VB

        Public Declare Function BTICSDB_CmdRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdRd@12" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_CmdRestart Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdRestart@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdShotWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdShotWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_CmdSkipWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdSkipWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_CmdStackClr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStackClr@8" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdStartRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStartRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_CmdStartWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStartWr@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdStepWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdStepWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_CmdTotalRd Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdTotalRd@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_CmdTotalWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdTotalWr@12" (ByVal countval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdWr Lib "BTICSDB.DLL" Alias "_BTICSDB_CmdWr@12" (ByVal block As UInt16(), ByVal addrval As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_DllUsageCount Lib "BTICSDB.DLL" Alias "_BTICSDB_DllUsageCount@0" () As Int32
        Public Declare Function BTICSDB_FilterAddr Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterAddr@16" (ByVal addrval As Int32, ByVal sival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_FilterCreate Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterCreate@4" (ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_FilterFill Lib "BTICSDB.DLL" Alias "_BTICSDB_FilterFill@12" (ByVal msgaddr As UInt32, ByVal basevaladdr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_GetChanCount Lib "BTICSDB.DLL" Alias "_BTICSDB_GetChanCount@12" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_IsChan Lib "BTICSDB.DLL" Alias "_BTICSDB_IsChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_IsRcvChan Lib "BTICSDB.DLL" Alias "_BTICSDB_IsRcvChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_IsXmtChan Lib "BTICSDB.DLL" Alias "_BTICSDB_IsXmtChan@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListAddr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListAddr@12" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListAddrEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListAddrEx@16" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListAdvance Lib "BTICSDB.DLL" Alias "_BTICSDB_ListAdvance@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListClear Lib "BTICSDB.DLL" Alias "_BTICSDB_ListClear@8" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListConfig Lib "BTICSDB.DLL" Alias "_BTICSDB_ListConfig@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListConfigEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListConfigEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListDataRdEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListDataRdEx@20" (ByVal buf As Byte(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListDataWrEx Lib "BTICSDB.DLL" Alias "_BTICSDB_ListDataWrEx@20" (ByVal buf As Byte(), ByVal count As Int32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListInit Lib "BTICSDB.DLL" Alias "_BTICSDB_ListInit@12" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListNextRd Lib "BTICSDB.DLL" Alias "_BTICSDB_ListNextRd@12" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListNextWr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListNextWr@12" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTICSDB_ListPostRd Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPostRd@12" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Sub BTICSDB_ListPostWr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPostWr@12" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Sub BTICSDB_ListPreRd Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPreRd@12" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Sub BTICSDB_ListPreWr Lib "BTICSDB.DLL" Alias "_BTICSDB_ListPreWr@12" (ByVal listaddr As UInt32, ByVal header As UInt16(), ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_MsgActivityRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgActivityRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_MsgActivityWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgActivityWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_MsgCheck Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTICSDB_MsgCommRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCommRd@12" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgCommWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCommWr@12" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgConfig Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgConfig@16" (ByVal configval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_MsgCreateEx Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgCreateEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgFieldRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgFieldRd@12" (ByVal fieldtype As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgFieldWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgFieldWr@16" (ByVal fieldval As UInt32, ByVal fieldtype As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgOptRd Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_MsgOptWr Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_MsgReset Lib "BTICSDB.DLL" Alias "_BTICSDB_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_SchedAgain Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedAgain@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBranchEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBuildEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBuildEx@32" (ByVal nummsgs As Int32, ByVal msgs As UInt32(), ByVal freq As Int32(), ByVal interblockgap As Int32, ByVal rsvdblocks As Int32, ByVal bitrate As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBuildExx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedBuildExx@40" (ByVal nummsgs As Int32, ByVal msgs As UInt32(), ByVal freq As Int32(), ByVal interblockgap As Int32, ByVal rsvdblocks As Int32, ByVal bitrate As Int32, ByVal buf As IntPtr, ByVal bufsize As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedCallEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedCallEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedGCD Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedGCD@8" (ByVal a As Int32, ByVal b As Int32) As Int32
        Public Declare Function BTICSDB_SchedLCM Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedLCM@8" (ByVal a As Int32, ByVal b As Int32) As Int32
        Public Declare Function BTICSDB_SchedLogEx Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedLogEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedNop Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedNop@8" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedPulse0 Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedPulse0@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedPulse1 Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedPulse1@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedUser Lib "BTICSDB.DLL" Alias "_BTICSDB_SchedUser@12" (ByVal useraddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_TestProtocol Lib "BTICSDB.DLL" Alias "_BTICSDB_TestProtocol@4" (ByVal handleval As IntPtr) As Int32
    End Class
